--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-telethon
-solana
-requests
 psycopg2-binary
 tweepy
 Flask[async]
 greenlet>=3.0.0
 solders==0.16.0
 httpx==0.26.0
+telethon
+requests
+solana==0.29.0
