--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-psycopg2-binary
-tweepy
-Flask[async]
-greenlet>=3.0.0
-solders==0.16.0
-httpx==0.27.0  
-telethon
-requests
-solana==0.29.0
+telethon==2.0.0
+solana>=0.35.0
+solders>=0.18.0
+httpx>=0.27.0
+flask>=3.0.0
